Improve caching in `TaxService` by reducing redundant database calls, consolidating `noTaxYear` lookups, and utilizing shared cache keys.